# idraa

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CNAME  Dockerfile  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  docker-entrypoint.sh  fly.toml  index.html  package.json  pyproject.toml  tailwind.config.js  vmc-deck.html
.github/: dependabot.yml  dependency-review-config.yml
.github/workflows/: ci.yml  dependency-review.yml
alembic/: env.py
alembic/versions/: 08358cf073b8_widen_audit_log_action_to_64.py  0897a0ff350e_seed_library_extension.py  101fc72c9f38_phase_1_1_2_orgs_users_sessions_audit.py  1297897c44f5_pr_mu_1_capability_value_upper_bound.py  1a3794c327d4_phase_1_3_scenarios.py  1a5eb1814c32_run_presentation_fx_snapshot.py  26444158e537_recalibrate_frequency_bands_to_register_.py  279be155ec3a_strong_auth_p2_step_up_reauthenticated_.py  (+89 more)
data/: loss_anchor_tables.README  loss_anchor_tables.json  loss_form_envelopes.README  loss_form_envelopes.json  loss_form_source_corpus.README  loss_form_source_corpus.json  loss_form_targets.README  loss_form_targets.json  seed_attack_avgapfill_full.json  seed_attack_catalog.NOTICE.md  seed_attack_catalog.json  seed_attack_d_iii_b_full.json  seed_attack_exemplar_mappings.json  seed_attack_full_mappings.json  seed_control_library_entries.json  seed_framework_crosswalk.NOTICE.md  seed_framework_crosswalk.json  seed_library_entries.json  seed_library_entries_extension.json  seed_qualitative_bands.json  target_archetypes.README  target_archetypes.json
docs/: supply-chain.md
fair_cam/: __init__.py  composition.py  normalization.py  pyproject.toml
fair_cam/calibration/: elapsed_time_taus.py
fair_cam/controls/: __init__.py  effectiveness.py
fair_cam/data/: __init__.py  iris_2025.py
fair_cam/models/: __init__.py  composition_topology.py  control.py  risk_enhanced.py  sub_function.py
fair_cam/parameters/: __init__.py  _iris_2025_calibration.py  industry_calibration.py
fair_cam/quantile_pooling/: __init__.py  _cleaning.py  _lognormal.py  _lognormal_native.py  _normal.py  _types.py
fair_cam/risk_engine/: __init__.py  control_attribution.py  control_aware.py  fair_core.py  group_composition.py  group_composition_batched.py  native_control_aware.py
fair_cam/tests/: conftest.py  test_calibration_uses_iris_2025.py  test_composition_operators.py  test_composition_topology.py  test_fair_parameters_scaling.py  test_iris_2025_reference.py  test_magnitude_prior_citations.py  test_normalization.py
fair_cam/tests/calibration/: test_elapsed_time_taus.py
fair_cam/tests/composition/: test_layer1.py  test_layer2_operators.py
fair_cam/tests/controls/: test_effectiveness_breakdown_field.py
fair_cam/tests/models/: test_assignment.py  test_assignment_optional_capability.py  test_calculate_risk_reduction_factor_two_branch.py  test_composition_topology.py  test_control_methods.py  test_control_reshape.py  test_effectiveness.py  test_risk_enhanced_loss_reduction_field.py  test_sub_function.py
fair_cam/tests/quantile_pooling/: test_clean_quantile_pair.py  test_combine_lognorm_trunc.py  test_combine_norm.py  test_fit_lognorm_trunc.py  test_fit_norm_trunc.py  test_lognormal_native.py  test_lognormal_to_pert_approx.py  test_mixture_collapse.py  test_mixture_pooling.py  test_mode_clamp_reason_enum_values.py  test_no_v3_imports.py  test_normal_to_pert_approx.py  test_pooling_divergence_warning.py
fair_cam/tests/quantile_pooling/fixtures/: evaluator_commit_pinned.txt  pert_fidelity_bounds.json
fair_cam/tests/risk_engine/: _helpers.py  test_compose_group_effectiveness.py  test_compose_groups_called_once_per_scenario.py  test_control_attribution.py  test_diagnostic_consumes_compose_groups.py  test_effect_gate_provenance.py  test_effect_type_aware_gate.py  test_effect_type_wiring.py  test_engine_diagnostic_equivalence.py  test_group_composition.py  test_group_composition_batched.py  test_helpers_smoke.py  test_kappa_attribution_threading.py  test_meta_reliability_coupling.py  test_mixture_sampling.py  test_native_apply_node_multipliers.py  test_native_calculator_aggregate.py  test_native_calculator_single.py  test_native_degenerate_pert.py  test_native_engine_subtractor.py  test_native_lognormal.py  test_node_level_equivalence.py  test_per_control_attribution_reconciliation.py  test_response_magnitude_reroute.py  test_subset_reduction_closed_form.py  test_topology_moves.py  test_two_branch_composition.py
fair_cam/validation/: __init__.py  input_validator.py
notebooks/: fair_cam_example.ipynb
scripts/: __init__.py  audit_library_vulnerability.py  bench_mc_iterations.py  build_attack_catalog_seed.py  build_attack_coverage_entries.py  build_crosswalk_seed.py  build_d_iii_a_recalibration.py  build_d_iii_b_new_entries.py  build_loss_pert_conversion.py  build_tef_lognormal_conversion.py  build_tef_pert_revert.py  build_within_sector_detemplating.py  check_canonical_remote.py  derive_pert_fidelity_bounds.py  e2e_acme_industrial.py  e2e_dashboard_smoke.py  e2e_edge_cases.py  e2e_multi_industry.py  e2e_single_run.py  e2e_wizard_helpers.py  fly  issue_129_audit_log_migration.py  issue_131_audit_log_migration.py  lint_adapter_iter.py  lint_alembic_uuids.py  lint_branch_state.py  lint_specs.py  lint_tracked_paths.py  local-uat.sh  recurate_seed_entries.py  regen_r_oracle.R  run_local_gate.py  sca_gate.py  sca_suppressions.txt  triage_library_completeness.py  uat_design_system.py
tests/: _loss_shape_helpers.py  conftest.py  factories.py  test_anti_regression.py  test_app.py  test_assignment_row_picker.py  test_config.py  test_control_implementation_stage_model.py  test_control_repo_active_stage.py  test_controls_csv_stage.py  test_controls_form_stage_select.py  test_controls_service_stage.py  test_controls_stage_badge.py  test_db.py  test_help_control_sub_functions.py  test_scenario_edit_demoted_control.py  test_scenario_view_excluded_controls.py  test_smoke.py  test_sqlite_partial_index_probe.py
uat/: README.md  run_uat.sh  test_mvp_smoke.py
(+1052 files in other folders)
