[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "idraa"
version = "0.0.0"
description = "Quantitative cyber-risk analysis platform — FAIR methodology, control-aware"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Idraa" }]
dependencies = [
  "aiosqlite>=0.20",
  "alembic>=1.13",
  "asyncpg>=0.29",
  "babel>=2.16",
  "fair-cam",
  "fastapi>=0.115",
  "httpx>=0.27",
  "itsdangerous>=2.2",
  "jinja2>=3.1",
  "passlib[argon2]>=1.7",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "python-multipart>=0.0.26",
  "reportlab>=4.2",
  "sqlalchemy>=2.0",
  "uvicorn[standard]>=0.32",
  "xlsxwriter>=3.2,<4",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.3",
  "pytest-alembic>=0.11",
  "pytest-asyncio>=0.24",
  "pytest-cov>=5.0",
  "pytest-playwright>=0.5",
  # openpyxl is DEV-only (Task 7): no src/ module imports it at runtime anymore —
  # the LET write path uses xlsxwriter. It stays here so the injection / no-formula-
  # promotion tests can still read produced workbooks via openpyxl.load_workbook +
  # cell.data_type.
  "openpyxl>=3.1",
  "ruff>=0.6",
  "mypy>=1.11",
  "pre-commit>=3.8",
  "papermill>=2.6",
  "jupyter>=1.1",
  "ipykernel>=6.29",
  "playwright>=1.47",
  "syrupy>=5.3.2",
  "types-passlib",
  "bandit[toml]>=1.7",
  "pypdf>=5.0",
  "beautifulsoup4>=4.12",
  "html5lib>=1.1",
  "zizmor>=1.27.0",
  "cyclonedx-bom>=7.3.0",
]

[project.scripts]
idraa = "idraa.tasks.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/idraa"]

[tool.uv.sources]
fair-cam = { path = "./fair_cam", editable = true }

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "fair_cam"]
extend-exclude = ["notebooks", "alembic/versions"]

[tool.ruff.lint]
select = [
  "E", "F", "W",      # pycodestyle + pyflakes
  "I",                # isort
  "B",                # flake8-bugbear
  "UP",               # pyupgrade
  "SIM",              # flake8-simplify
  "RUF",              # ruff-specific
  "N",                # pep8-naming
  "C4",               # comprehensions
  "S",                # flake8-bandit (security) — catches S701 Jinja2 autoescape,
                      # S608 SQL injection patterns, S603 subprocess misuse, etc.
]
ignore = [
  "E501",  # line length (already enforced by formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
  "N802", "N803",    # allow test_FooBar-style names
  "S101",            # pytest is built on assert
  "S105", "S106", "S107", # test fixtures / factories may use throwaway passwords
  "S311",            # tests can use random for test-data generation
  "S603", "S607",    # tests spawn trusted internal commands (E2E live_server, etc.)
  "RUF001", "RUF002", "RUF003", # allow unicode math symbols (×, σ, μ, etc.) in test docstrings/comments
  "RUF059",  # tests unpack the full (preview, errors, forms) tuple for readability even when not all are asserted
  "UP012",   # allow explicit encode("utf-8") in test helpers for clarity
]
"fair_cam/**" = [
  "RUF001", "RUF002", "RUF003", # FAIR notation uses unicode math (σ, μ, τ, ×, λ) in docstrings/comments
]
"fair_cam/tests/**" = [
  "N802", "N803",    # allow test_FooBar-style names
  "S101",            # pytest is built on assert
  "S105", "S106", "S107", # test fixtures / factories may use throwaway passwords
  "S311",            # tests can use random for test-data generation
  "S603", "S607",    # tests spawn trusted internal commands
  "RUF059",  # tests unpack full tuples for readability even when not all are asserted
  "UP012",   # allow explicit encode("utf-8") in test helpers for clarity
]
"src/idraa/routes/**" = [
  "B008",            # FastAPI's `= Depends(...)` idiom is a function-call-in-default
]
"scripts/*.py" = [
  "N999",  # script filenames use kebab-case by convention (not importable as modules)
  "S607",  # scripts invoke trusted external CLIs (gh, git) via partial path; not user-controlled
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true
namespace_packages = true
explicit_package_bases = true
mypy_path = "src"
files = ["src/idraa", "tests"]

# fair_cam is first-party code (not vendored) and IS type-checked — its source
# is gated by mypy (see scripts/run_local_gate.py). fair_cam/tests stays untyped
# for now (relaxed below), mirroring how top-level tests/ is treated.
[[tool.mypy.overrides]]
module = ["fair_cam.tests.*"]
disallow_untyped_defs = false

# Third-party libraries without bundled type stubs.
[[tool.mypy.overrides]]
module = ["babel.*", "openpyxl.*", "pandas.*", "papermill.*", "reportlab.*", "scipy.*", "xlsxwriter.*"]
ignore_missing_imports = true

# Test files get slightly relaxed rules
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
# Tests can declare untyped helpers — the body still type-checks because
# disallow_incomplete_defs stays True, which catches partially-typed
# signatures (def f(x) -> None:). Lesson from PR γ C9.b: keep both
# disallow_untyped_defs=false AND disallow_incomplete_defs=true to match
# what was wanted (tolerate untyped helpers, reject partial typing).

[tool.bandit]
# Recursive target is set on the CLI (-r src/); these exclusions are defensive
# in case anyone runs `bandit -c pyproject.toml` without specifying a target.
exclude_dirs = [".venv", "tests", "notebooks", "fair_cam", "alembic/versions"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
  "-ra",
  "--strict-markers",
  "--strict-config",
  "--cov=idraa",
  "--cov-report=term-missing",
  "--cov-fail-under=0",
  "-m", "not e2e and not slow and not ci_only",
]
markers = [
  "slow: tests that take > 1 second",
  "e2e: end-to-end browser tests (require Playwright)",
  "notebook: papermill notebook smoke tests",
  "ci_only: subprocess-driven CI tests; deselected from local hot loop",
]
asyncio_mode = "auto"

# ---- PR ρ schema-consistency-hygiene framework ----

[tool.idraa.contracts.lint]
# Files scanned by scripts/lint_adapter_iter.py for index-on-list patterns
# in conversion-layer code. Add new translation modules here when introduced.
scoped_files = [
    "src/idraa/services/run_executor.py",
    "src/idraa/services/controls_importer.py",
    "src/idraa/services/overlays_importer.py",
    "src/idraa/services/scenario_library.py",
    "src/idraa/services/aggregate_run_view_model.py",
    "src/idraa/services/run_view_model.py",
    "src/idraa/services/audit.py",
    "src/idraa/services/seed_library_loader.py",
]

# Each block configures one ORM ↔ DTO pair for tests/contracts/test_field_sync.py.
# - orm: dotted-path import of the SQLAlchemy mapped class.
# - dto_classes: list of dotted-path imports of Pydantic schemas to check
#   against this ORM. Each (orm, dto) pair runs the three-way sync helper.
# - allowlist: ORM column names that legitimately don't appear on the DTO
#   (typically id, organization_id, created_at, updated_at, internal-management
#   columns). Each entry should be inspectable as a real ORM column — the
#   helper's defense-in-depth check fails if not.

[tool.idraa.contracts.field_sync.organization]
orm = "idraa.models.organization.Organization"
dto_classes = [
    "idraa.schemas.organization.OrganizationForm",
]
allowlist = [
    "id",                # IdMixin — primary key, never user-supplied
    "created_at",        # TimestampMixin
    "updated_at",        # TimestampMixin
]

[tool.idraa.contracts.field_sync.scenario]
orm = "idraa.models.scenario.Scenario"
dto_classes = [
    "idraa.schemas.scenario.ScenarioForm",
]
allowlist = [
    "id",                          # IdMixin
    "organization_id",             # OrgMixin — multi-tenant scope, set by service
    "created_at",                  # TimestampMixin
    "updated_at",                  # TimestampMixin
    "library_pin",                 # internal — provenance JSON pin if from library
    "row_version",                 # internal — optimistic-lock counter
    "created_by",                  # internal — FK to user, set by service from session
    "vuln_framing",                # internal — audit-F2 elicitation-framing provenance, system-managed
    "entry_currency",              # internal — multi-currency P2 provenance, set by route after create (not on ScenarioForm)
    "entry_rate",                  # internal — multi-currency P2 provenance, set by route after create (not on ScenarioForm)
]
dto_only_allowlist = [
    "library_entry_id",  # user-input flag indicating library origin; consumed during creation; provenance lives in library_pin
]

[tool.idraa.contracts.field_sync.control]
orm = "idraa.models.control.Control"
dto_classes = [
    "idraa.schemas.control.ControlForm",
]
allowlist = [
    "id",                       # IdMixin
    "organization_id",          # OrgMixin
    "created_at",               # TimestampMixin
    "updated_at",               # TimestampMixin
    "created_by",               # internal — FK to user, set by service
    "source",                   # P2b internal — provenance, set by service (custom vs library-derived)
    "library_pin",              # P2b internal — provenance JSON pin if adopted from catalog
    "adopted_snapshot",         # #438 internal — as-adopted baseline for re-sync diffs; never a form field
]
dto_only_allowlist = [
    "assignments",  # DTO-side list of ControlFunctionAssignmentDTO; ORM side is a relationship (not a column)
]

[tool.idraa.contracts.field_sync.control_function_assignment]
orm = "idraa.models.control_function_assignment.ControlFunctionAssignment"
dto_classes = [
    "idraa.schemas.control.ControlFunctionAssignmentDTO",
]
allowlist = [
    "id",                       # IdMixin
    "organization_id",          # OrgMixin
    "control_id",               # FK to parent Control — set by service from URL
    "created_at",               # TimestampMixin
    "updated_at",               # TimestampMixin
]

[tool.idraa.contracts.field_sync.overlay_definition]
orm = "idraa.models.overlay.OverlayDefinition"
dto_classes = [
    "idraa.schemas.overlay.OverlayForm",
    "idraa.schemas.overlay.OverlayDeactivateForm",
]
allowlist = [
    "id",                      # IdMixin
    "organization_id",         # OrgMixin
    "created_at",              # TimestampMixin
    "updated_at",              # TimestampMixin
    "version",                 # internal — revision counter
    "is_active",               # internal — soft-deactivation flag
    "tag",                     # in OverlayForm but not OverlayDeactivateForm; real ORM column
    "display_name",            # in OverlayForm but not OverlayDeactivateForm; real ORM column
    "frequency_multiplier",    # in OverlayForm but not OverlayDeactivateForm; real ORM column
    "magnitude_multiplier",    # in OverlayForm but not OverlayDeactivateForm; real ORM column
    "sources",                 # in OverlayForm but not OverlayDeactivateForm; real ORM column
    "methodology",             # in OverlayForm but not OverlayDeactivateForm; real ORM column
]
dto_only_allowlist = [
    "methodology_change_reason",  # OverlayForm — stored in OverlayDefinitionRevision, not OverlayDefinition
    "reason",                     # OverlayDeactivateForm — deactivation audit reason; stored in audit_log, not overlay
]

[tool.idraa.contracts.field_sync.library_entry]
# Epic C-i (#335 §6): ScenarioLibraryEntry (ORM) ↔ LibraryEntrySeed (seed DTO).
# LibraryEntrySeed is the Pydantic validator the seed/import path runs before
# the raw INSERT, so it must carry every user-supplied business column. The
# allowlist holds the entry's identity/provenance/timestamp columns that are
# set by the migration / service, never sourced from the seed JSON.
orm = "idraa.models.scenario_library.ScenarioLibraryEntry"
dto_classes = [
    "idraa.services.seed_library_loader.LibraryEntrySeed",
]
allowlist = [
    "id",            # composite PK — assigned by loader/migration, not seed JSON
    "version",       # composite PK — immutable-snapshot version, set by loader
    "source",        # P3 provenance — 'seed' vs 'imported', set by service
    "row_version",   # internal — optimistic-lock counter
    "created_at",    # TimestampMixin
    "updated_at",    # TimestampMixin
]
